<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:gravity="center"
        android:id="@+id/tv_title_news_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/tv_free_run"
        android:textSize="20dp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <TextView
            android:id="@+id/tv_schedule_news_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:fontFamily="sans-serif-thin"
            android:gravity="left"
            android:text="@string/tv_days_model"
            android:textColor="#896836"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/tv_time_news_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".50"
            android:fontFamily="sans-serif-thin"
            android:gravity="right"
            android:text="@string/tv_time_model"
            android:textColor="#896836"
            android:textSize="16dp" />

    </LinearLayout>
</LinearLayout>
