<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.ufrn.movimentum.LoginActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="16pt"
        android:fontFamily="sans-serif-thin"
        android:textColor="@color/colorPrimary"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Entrar na aplicação"
        android:textSize="10pt"
        android:fontFamily="sans-serif-thin"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:textColor="#a19e9e"/>

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="Aprenda Kanji escrevendo"-->
    <!--android:textSize="8pt"-->
    <!--android:layout_below="@+id/textView2"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:id="@+id/textView3"-->
    <!--android:layout_marginBottom="10sp"/>-->

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <!--<ScrollView-->
    <!--android:id="@+id/login_form"-->
    <!--android:layout_marginTop="20dp"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent">-->

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:defaultFocusHighlightEnabled="false"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                tools:ignore="InvalidImeActionId" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/email_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:padding="@dimen/padding_button"
            android:text="@string/action_sign_in"
            android:fontFamily="sans-serif-thin"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:gravity="center">

            <TextView
                android:id="@+id/bt_cadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cadastre-se"
                android:textColor="#5858e7"
                android:textSize="8pt"
                android:fontFamily="sans-serif-thin"
                android:clickable="true"/>

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   /   "
                android:textColor="#989998"
                android:textSize="8pt"
                android:fontFamily="sans-serif-thin"
                android:clickable="true"/>

            <TextView
                android:textAlignment="viewEnd"
                android:id="@+id/tv_log_esq_senha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Esqueceu a senha?"
                android:textColor="#5858e7"
                android:textSize="8pt"
                android:fontFamily="sans-serif-thin"
                android:clickable="true"/>


        </LinearLayout>

    <!--</LinearLayout>-->




        <!--<Button-->
            <!--android:id="@+id/bt_cadastrar"-->
            <!--style="?android:textAppearanceSmall"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="5dp"-->
            <!--android:padding="@dimen/padding_button"-->
            <!--android:fontFamily="sans-serif-thin"-->
            <!--android:text="@string/action_sign_up"-->
            <!--android:textStyle="bold" />-->

    </LinearLayout>
    <!--</ScrollView>-->
</LinearLayout>
