<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.ufrn.movimentum.CadastrarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="16pt"
        android:fontFamily="sans-serif-thin"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cadastre-se na aplicação"
        android:textSize="10pt"
        android:fontFamily="sans-serif-thin"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:textColor="#a19e9e"/>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Aprenda Kanji escrevendo"-->
        <!--android:textSize="8pt"-->
        <!--android:layout_below="@+id/textView2"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:id="@+id/textView3"-->
        <!--android:layout_marginBottom="10sp"/>-->

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/tv_cad_login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />



        <LinearLayout
            android:id="@+id/tv_cad_email_login_form"
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <AutoCompleteTextView
                    android:id="@+id/tv_cad_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nome"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <AutoCompleteTextView
                    android:id="@+id/tv_cad_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/tv_cad_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"

                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp">

                <EditText
                    android:id="@+id/tv_cad_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Confirme sua senha"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"

                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:ignore="InvalidImeActionId" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textSize="8pt"
                android:layout_marginTop="18dp"
                android:text="Perfil" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/sp_cad_role"
                android:animateLayoutChanges="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </android.support.v7.widget.AppCompatSpinner>

        </LinearLayout>
    <!--</ScrollView>-->
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:gravity="bottom"-->
        <!--android:layout_marginTop="12dp"-->
        <!--android:orientation="vertical">-->

        <Button
            android:layout_marginTop="16dp"
            android:id="@+id/bt_cad_cadastrar"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:padding="@dimen/padding_button"
            android:text="Cadastrar"
            android:textStyle="bold" />
        <Button
            android:id="@+id/bt_back_cad"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:background="#b6b6b6"
            android:textColor="#fff"
            android:layout_marginTop="8dp"
            android:padding="@dimen/padding_button"
            android:text="Cancelar"
            android:textStyle="bold" />

        <!--<TextView-->
            <!--android:id="@+id/bt_back_cad"-->
            <!--android:layout_marginTop="12dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Voltar"-->
            <!--android:textColor="#5858e7"-->
            <!--android:textSize="8pt"-->
            <!--android:fontFamily="sans-serif-thin"-->
            <!--android:clickable="true"/>-->

    </LinearLayout>
    </ScrollView>
</LinearLayout>
